# autowarn_bot

./: Cargo.toml  README.md  rustfmt.toml
src/: lib.rs  main.rs  simple_commands.rs  utils.rs  warnings.rs
src/warnings/: commands.rs  dto.rs  handlers.rs  repository.rs
src/warnings/handlers/: setup_warns.rs  warn.rs
