[package]
name = "roff_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { git = "https://github.com/teloxide/teloxide", branch = "dispatching2", features = ["macros", "trace-adaptor"] }
serde = "1.0.133"
mongodb = "2.0.2"
tokio = "1.15.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
anyhow = "1.0.52"
chrono = "0.4.19"
